# cadplatform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: T2.2-wall-classification-spec.md
output/: .gitkeep
samples/: .gitkeep
scripts/: make_sample_plan.py  validate_dxf.py
src/cadplatform/: __init__.py  cli.py  config.py
src/cadplatform/cad_pipeline/: assembly.py  classify.py  decompose.py  geometry.py  layers.py  orthogonalize.py  regions.py  walls.py
src/cadplatform/dxf_layer/: layer_defs.py  serialize.py  validate.py
src/cadplatform/image_engine/: detect.py  layer_separation.py  loader.py  preprocess.py  text_regions.py  vision.py  vision_judge.py
tests/: conftest.py  test_geometry.py  test_layer_separation.py  test_vision.py  test_wall_slice.py
tests/fixtures/: README.md
