[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadplatform"
version = "0.1.0"
description = "Convert 2D architectural drawings (PDF/PNG/JPEG) into Class-A, production-ready DXF files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "ezdxf>=1.3",
    "opencv-python>=4.9",
    "shapely>=2.0",
    "numpy>=1.26",
    "PyMuPDF>=1.24",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cadplatform = "cadplatform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
